# trigram

./: .clang-format  .clang-tidy  .gitignore  BasePresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile.cpp-env-ubuntu  LICENSE  atomic_queue.h  defs.h  group_if.h  lfqueue.h  main.cpp  trigram.cpp  trigram.h  tsqueue.h  util.h  word.cpp  word.h
.github/workflows/: build.yml
cmake/Modules/: GenerateFile.cmake  Version.cmake
cmake/toolchains/amd64/: darwin-amd64-clang.cmake  linux-amd64-clang.cmake  linux-amd64-gcc.cmake  windows-amd64-msvc.cmake
cmake/toolchains/arm64/: darwin-arm64-clang.cmake  linux-arm64-clang.cmake  linux-arm64-gcc.cmake
